crates/busx/tests/snapshots/tui_pty__result_call_makefd_80x20.snap
---
source: crates/busx/tests/tui_pty.rs
expression: screen.as_str()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌org.busx.Test.MakeFd──────────────────────────────────────────────────────────┐
│<fd /dev/null ro>                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back · q quit · ? help
