crates/busx/tests/snapshots/tui_pty__result_listen_method_80x20.snap
---
source: crates/busx/tests/tui_pty.rs
expression: screen.as_str()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌listen org.busx.Test.TakeHints────────────────────────────────────────────────┐
│listening…                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back/stop · q quit · ? help
