crates/busx/tests/snapshots/tui_pty__result_long_line_scrolled.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌org.busx.Test.LongString──────────────────────────────────────────────────────┐
│<the quick brown fox jumps over the lazy dog near the riverbank; a truly love>│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back · q quit · ? help
