crates/busx/tests/snapshots/tui_pty__result_set_80x20.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 395
expression: screen
---
org.busx.Test > /org/busx/Test > org.busx.Test > set volume > Result
┌org.busx.Test.volume──────────────────────────────────────────────────────────┐
│ok                                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? help
