crates/busx/tests/snapshots/tui_pty__service_list_64x12.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 290
expression: screen
---

┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollA                        <PID>  <PROC>         │
│org.busx.ScrollB                        <PID>  <PROC>         │
│org.busx.ScrollC                        <PID>  <PROC>         │
│org.busx.ScrollD                        <PID>  <PROC>         │
│org.busx.ScrollE                        <PID>  <PROC>         │
│org.busx.ScrollF                        <PID>  <PROC>         │
│org.busx.ScrollG                        <PID>  <PROC>         │
│org.busx.ScrollH                        <PID>  <PROC>         │
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
