crates/busx/tests/snapshots/tui_pty__service_list_64x8.snap
---
source: crates/busx/tests/tui_pty.rs
assertion_line: 205
expression: screen
---

┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollA                        <PID>  <PROC>         │
│org.busx.ScrollB                        <PID>  <PROC>         │
│org.busx.ScrollC                        <PID>  <PROC>         │
│org.busx.ScrollD                        <PID>  <PROC>         │
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
